samples/_failures_safe/1761399792_3b3a13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d12d0a9.c: In function ‘main’:
./samples/SAFE/__tmp_6d12d0a9.c:171:5: error: expected expression at end of input
  171 |     if (len >
      |     ^~
./samples/SAFE/__tmp_6d12d0a9.c:171:5: error: expected declaration or statement at end of input
